Registration: Fixed alignment.

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -9,6 +9,7 @@
 	color: black;
 	font-size: 1.5em;
 	font-weight: 100;
+    display: inline-block;
 }
 
 .page-toggle 
